--- a/martini-jbpm-kjar/pom.xml
+++ b/martini-jbpm-kjar/pom.xml
@@ -5,13 +5,9 @@
          http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.martinispec</groupId>
-        <artifactId>martinispec-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
-
+    <groupId>com.martinispec</groupId>
     <artifactId>martiniavicolo</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>kjar</packaging>
 
     <name>MartiniAvicolo jBPM Project</name>
@@ -21,7 +17,11 @@
     </description>
 
     <properties>
-        <!-- Eredita da parent: maven.compiler.source, target, encoding, jbpm.version -->
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jbpm.version>7.74.1.Final</jbpm.version>
+        <junit.version>5.10.0</junit.version>
     </properties>
 
     <repositories>
@@ -60,18 +60,21 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
+            <version>5.5.0</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
+            <version>3.24.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -82,6 +85,7 @@
             <plugin>
                 <groupId>org.kie</groupId>
                 <artifactId>kie-maven-plugin</artifactId>
+                <version>${jbpm.version}</version>
                 <extensions>true</extensions>
             </plugin>
 
@@ -89,18 +93,25 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
             </plugin>
 
             <!-- Surefire for Tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
             </plugin>
 
             <!-- JaCoCo for Test Coverage -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.10</version>
                 <executions>
                     <execution>
                         <goals>
