--- a/kubernetes/kie-server-with-mdb.yaml
+++ b/kubernetes/kie-server-with-mdb.yaml
@@ -41,7 +41,7 @@ spec:
               mountPath: /config-dest
       containers:
       - name: kie-server
-        image: 192.168.1.128:30002/martini-jbpm/jbpm-server-with-mdb:1.0.5
+        image: 192.168.1.128:30002/martini-jbpm/jbpm-server-with-mdb:1.0.0
         imagePullPolicy: Always
         env:
           - name: KIE_SERVER_JMS_QUEUE_REQUEST
@@ -54,6 +54,9 @@ spec:
             value: jbpm-kie-server
           - name: KIE_SERVER_LOCATION
             value: http://localhost:8080/kie-server/services/rest/server
+          # Routing messaggi -> processId (configurazione opzionale per il listener)
+          - name: MESSAGE_ROUTING_AVVIAFIGLIO
+            value: "com.martinispec.procfiglio"
           - name: JAVA_OPTS
             value: "-server -Xms512m -Xmx2512m -XX:MetaspaceSize=512M -XX:MaxMetaspaceSize=1512m -Djava.net.preferIPv4Stack=true -Djboss.modules.system.pkgs=org.jboss.byteman -Djava.awt.headless=true  --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED"
         volumeMounts:
