fix: pre-bake KJAR in Maven repo to resolve BC build errors
- Update Dockerfile to include KJAR (martiniavicolo) JAR/POM in /opt/jboss/.m2
- Update build-and-push.sh to copy KJAR artifacts into Docker context
- Resolve "org.default:artifact:jar:1.0.0" error in Business Central build
- Ensure all project dependencies are available in pod's local Maven repo

--- a/kubernetes/Dockerfile
+++ b/kubernetes/Dockerfile
@@ -8,17 +8,24 @@ USER root
 # Il JAR contiene tutte le dipendenze al suo interno (maven-shade-plugin)
 COPY martini-jbpm-service-1.0.0-SNAPSHOT.jar /opt/jboss/wildfly/standalone/deployments/
 
-# Pre-popoliamo il repository Maven interno con l'artefatto "martini-jbpm-model"
-# in modo che Business Central/KIE risolvano la dipendenza senza accedere a repo esterni.
+# Pre-popoliamo il repository Maven interno con gli artefatti pre-compilati
+# in modo che Business Central/KIE risolvano le dipendenze senza accedere a repo esterni.
+
+# Modello (DTO)
 RUN mkdir -p /opt/jboss/.m2/repository/com/martinispec/martini-jbpm-model/1.0.0-SNAPSHOT
 COPY martini-jbpm-model-1.0.0-SNAPSHOT.jar /opt/jboss/.m2/repository/com/martinispec/martini-jbpm-model/1.0.0-SNAPSHOT/
 COPY martini-jbpm-model-1.0.0-SNAPSHOT.pom /opt/jboss/.m2/repository/com/martinispec/martini-jbpm-model/1.0.0-SNAPSHOT/
 
+# KJAR (processi BPMN)
+RUN mkdir -p /opt/jboss/.m2/repository/com/martinispec/martiniavicolo/1.0.0-SNAPSHOT
+COPY martiniavicolo-1.0.0-SNAPSHOT.jar /opt/jboss/.m2/repository/com/martinispec/martiniavicolo/1.0.0-SNAPSHOT/
+COPY martiniavicolo-1.0.0-SNAPSHOT.pom /opt/jboss/.m2/repository/com/martinispec/martiniavicolo/1.0.0-SNAPSHOT/
+
 # Imposta i permessi corretti
 RUN chown jboss:jboss /opt/jboss/wildfly/standalone/deployments/martini-jbpm-service-1.0.0-SNAPSHOT.jar && \
     chmod 644 /opt/jboss/wildfly/standalone/deployments/martini-jbpm-service-1.0.0-SNAPSHOT.jar && \
-    chown -R jboss:jboss /opt/jboss/.m2/repository/com/martinispec/martini-jbpm-model && \
-    chmod 644 /opt/jboss/.m2/repository/com/martinispec/martini-jbpm-model/1.0.0-SNAPSHOT/*
+    chown -R jboss:jboss /opt/jboss/.m2/repository/com/martinispec && \
+    chmod -R 644 /opt/jboss/.m2/repository/com/martinispec/*/1.0.0-SNAPSHOT/*
 
 # Ritorna all'utente jboss per sicurezza
 USER jboss
